<resources>
    <string name="app_name">ZumperSolution</string>
    <string name="place_name">Restaurant Name</string>
    <string name="place_address">Restaurant Address</string>
    <string name="place_contact">9876543210</string>
    <string name="place_rating">Rating: </string>
    <string name="review_writer">Author</string>
    <string name="review_time">Time</string>
    <string name="review_description">Description: </string>
    <string name="map_screen">Map View </string>
    <string name="list_screen">List View</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="reviews">Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
