<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/place_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/place_default" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/place_name"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/place_address"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_phone_white_24dp" />

        <TextView
            android:id="@+id/place_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/place_contact"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/place_rating"
            android:textSize="21sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/place_rating"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:isIndicator="true"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/place_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>