<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/review_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"

    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/review_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/review_writer"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/review_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:text="@string/review_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_author"
            android:layout_margin="12dp"
            android:text="@string/review_description"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/review_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/review_author"
            android:layout_above="@+id/review_description"
            android:layout_toStartOf="@+id/review_time"
            android:isIndicator="true" />

    </RelativeLayout>

</android.support.v7.widget.CardView>